--- a/sample.html
+++ b/sample.html
@@ -63,7 +63,7 @@
                     -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
                 }
-                .range1{
+                #range1{
                 position:absolute; 
                 bottom:50%;
                 transform:scale(1,4);
@@ -71,7 +71,7 @@
                 height: 30px;
                 width:40%;
                 }
-                .range2{
+                #range2{
                     /*box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;*/
                 position:absolute; 
                 bottom:50%;
@@ -107,16 +107,16 @@
   
     
     
-    <div class="link">
+    <!--<div class="link">
         <a href="https://www.netflix.com/jp/" style="color:#870000;">ここをクリック</a>すると<span class="netflix">Netflix</span>にログインできるよ！<br>
     </div>
     <div>
         <a href="https://www.netflix.com/title/80075595" style="color:#009da5">これ</a>はおすすめのやつです。
     </div>
-    <p>メカトロニクスって...たのしい！</p>
-    <input type="range" class="range1" min="0" max="20" value="10" ><br>
+    <p>メカトロニクスって...たのしい！</p>-->
+    <input type="range" id="range1" min="0" max="20" value="10" ><br>
     <div>
-    <input type="range" class="range2" min="0" max="20" value="10">
+    <input type="range" id="range2" min="0" max="20" value="10">
     </div>
 
 </body>
